k8s/deployment.yaml
# Source: flask/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    helm.sh/chart: flask-0.1.0
    app.kubernetes.io/name: flask
    app.kubernetes.io/instance: app
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flask
      app.kubernetes.io/instance: app
  template:
    metadata:
      labels:
        helm.sh/chart: flask-0.1.0
        app.kubernetes.io/name: flask
        app.kubernetes.io/instance: app
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      containers:
        - name: flask
          image: "yuradotnet/flask-demo:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            limits:
              cpu: "0.2"
              memory: 400Mi
            requests:
              cpu: "0.1"
              memory: 200Mi
