k8s/service.yaml
# Source: flask/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc
  labels:
    helm.sh/chart: flask-0.1.0
    app.kubernetes.io/name: flask
    app.kubernetes.io/instance: app
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: flask
    app.kubernetes.io/instance: app
