k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app
  labels:
    helm.sh/chart: flask-0.1.0
    app.kubernetes.io/name: flask
    app.kubernetes.io/instance: app
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: "flask.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app-svc
                port:
                  number: 80
